# genai-cli

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  LICENSE  README.md
crates/genai-cli/: Cargo.toml
crates/genai-cli/src/: audit.rs  cli.rs  config.rs  error.rs  init.rs  main.rs  output.rs  role.rs  spinner.rs  tools.rs  ui.rs  voices.rs
crates/genai-cli/src/gemini/: chat.rs  embed.rs  image.rs  mod.rs  tts.rs  types.rs
crates/genai-cli/src/models/: alias.rs  data.toml  mod.rs  sync.rs
crates/genai-cli/src/output/: image_preview.rs  mod.rs
crates/genai-cli/src/repl/: chat.rs  commands.rs  complete.rs  dispatch.rs  media.rs  mod.rs  prompt.rs  render.rs  sessions.rs
crates/genai-cli/src/session/: attachment.rs  db.rs  mod.rs
crates/genai-cli/src/tools/: cli_ui.rs  local.rs  mod.rs  policy.rs  process.rs  runner.rs  safety.rs  user.rs  warn.rs
crates/genai-cli/src/tools/generate_media/: image.rs  mod.rs  music.rs  speech.rs  tests.rs
crates/genai-models-gen/: Cargo.toml
crates/genai-models-gen/src/: main.rs
docs/: config.md  design.md  models.md  repl.md  roadmap.md  sessions.md  tools.md
docs/recipes/: README.md  coding.md  media.md  policy.md  research.md  user-tools.md
