[workspace]
resolver = "2"
members = ["crates/genai-cli", "crates/genai-models-gen"]

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["theerud <theerud@readyplanet.com>"]
repository = ""

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "signal"] }
reqwest = { version = "0.13", default-features = false, features = ["native-tls", "stream", "json", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.39", features = ["bundled"] }
rustyline = "18"
crossterm = "0.29"
directories = "6"
sha2 = "0.11"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
thiserror = "2"
anyhow = "1"
futures-util = "0.3"
async-stream = "0.3"
bytes = "1"
base64 = "0.22"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
