[workspace]
resolver = "2"
members = ["crates/genai-cli"]

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["theerud <theerud@readyplanet.com>"]
repository = ""

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
reqwest = { version = "0.13", default-features = false, features = ["native-tls", "stream", "json", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.39", features = ["bundled"] }
rustyline = "18"
directories = "6"
sha2 = "0.11"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
anyhow = "1"
futures-util = "0.3"
async-stream = "0.3"
bytes = "1"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
libc = "0.2"
imagesize = "0.13"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
