[package]
name = "genai-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "genai"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
clap.workspace = true
rusqlite.workspace = true
rustyline.workspace = true
directories.workspace = true
sha2.workspace = true
syntect.workspace = true
anyhow.workspace = true
futures-util.workspace = true
async-stream.workspace = true
bytes.workspace = true
base64.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
libc.workspace = true
imagesize.workspace = true

[dev-dependencies]
tempfile = "3"
